css/style.css
/* ... */
@media (max-width: 767px){
    #about-us {
        overflow: hidden;
    }
    #about-us #people img{
        max-width: 459px!important;
    }
    #about-us #elipse-1 img{
        width: auto;
        max-width: 617px!important;
    }
    #about-us #elipse-2 img{
        width: auto;
        max-width: 464px!important;
    }
    #about-us #elipse-3 img{
        width: auto;
        max-width: 333px!important;
    }
    #about-us #elipse-1{
        z-index: 20;
        overflow: hidden;
    }
    #about-us #elipse-2{
        z-index: 30;
        overflow: hidden;
    }
    #about-us #elipse-3{
        z-index: 40;
        overflow: hidden;
    }
    #nav-pages{
        display: none!important;
    }
    #toggle{
        display: grid!important;
    }
    #what-we-offer .card{
        margin: 0px 0px 20px 0px;
        width: 95vw;
    }
    #what-we-offer #card-8{
        margin: 0px 0px 20px 0px;
        width: 95vw;
    }
    footer #info,footer #our-contacts,footer #qr-code{
        grid-column: 1;
        justify-items: center;
        justify-self: center;
        text-align: center;
    }
    footer #info{
        grid-row: 3;
    }
    footer #our-contacts{
        grid-row: 1;
        display: grid;
    }
    footer #our-contacts hr{
        justify-self: center;
    }
    footer #qr-code{
        grid-row: 2;
        margin: 46px 0px 46px 0px;
    }
    #our-projects .group-2, #our-projects .group-1{
        grid-column: 1;
        justify-self: center;
    }
    #our-projects .card{
        width: 90vw;
        height: auto;
    }
    #our-projects .card .card-text{
        height: auto;
        padding: 14px 17px!important;
    }
    #our-projects .card .card-image{
        height: 123px;
    }
    #our-projects .card br:not(.br-special){
        display: none;
    }
    #our-projects #card-1{
        grid-row: 1;
    }
    #our-projects #card-2{
        grid-row: 2;
    }
    #our-projects #card-3{
        grid-row: 3;
    }
    #our-projects #card-4{
        grid-row: 4;
    }
    #our-projects #card-5{
        grid-row: 5;
    }
    #our-projects #card-6{
        grid-row: 6;
    }
    #our-projects #card-7{
        grid-row: 7;
    }
    #our-projects #card-8{
        grid-row: 8;
    }
    #about-us #text{
        font-size: 16px;
        height: auto;
        bottom: 30%;
        width: 90%;
    }
    #about-us #head-span{
        margin: 0px;
    }
    #about-us #people{
        left: 0px;
    }
    #header #title h1 {
        font-size: 56px;
    }
    #header #title h2 {
        font-size: 20px;
        margin: 39px 0px 0px 0px;
    }
    #header #subtitle{
        margin: 44px 0px;
    }
    #header #logos  .logo img{
        width: 100px;
    }
    #header #logos .logo{
        margin: 0px 10px 10px 10px;
    }
    #benefits-to-you #text{
        width: 90%;
    }
    #contact-us iframe{
        width: 100vw;
        height: 631px;
    }
    #contact-us #content #block {
        grid-row: 2/4;
        width: 90vw;
        margin: 0;
        align-self: center;
        justify-self: center;
    }
    #contact-us #content #map{
        grid-row: 1/3;
    }
    #contact-us #text {
        padding: 25px 22px;
    }
    #what-we-offer .card,#what-we-offer #card-8{
        padding: 26px 41px;
    }
    #what-we-offer #cards-1{
        grid-column: 1;
        grid-row: 2;
        margin-top: 20px;
    }
    #what-we-offer #cards-2{
        grid-column: 1;
        grid-row: 3;
        margin: 0;
    }
    #what-we-offer #cards-3{
        grid-column: 1;
        grid-row: 4;
    }
    #what-we-offer #text-content{
        grid-column: 1;
        grid-row: 1;
    }
    #about-us h6 {
        margin: 0vh 0vh 0vh 0vh;
    }
    h2:not(.special-h2){
        font-size: 36px!important;
    }
    #benefits-to-you #image{
        grid-row: 2;
        grid-column: 1;
        position: relative;
        background: url(../assets/img/assets-mobile-version.png);
        background-size: cover;
        width: -webkit-fill-available;
        height: 500px;
        background-position-y: -85px;
    }
}
/* ... */

